# Redukon

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  redukon.py
src/redukon/: api.py  cli.py  ollama.py
