[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redukon"
version = "3.1.0"
description = "Simple CLI tool for AI text rewriting with Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "requests>=2.31.0",
    "flask>=2.0.0",
]

[project.scripts]
redukon = "redukon.cli:main"

[tool.setup.packages.find]
where = ["src"]
